--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body class="body">
   <!-- Header -->
-  <header class="header">
-    <div class="header__container container">
+  <header class="header header__container">
+    <!-- <div class="header__container container"> -->
       <img src="./img/logo.svg" alt="Логотип Россия" class="header__logo">
       <ul class="header__languages">
         <li class="header__language">
@@ -20,24 +20,26 @@
           <a href="#" class="header__language-link">En</a>
         </li>
       </ul>
-    </div>
+    <!-- </div> -->
   </header>
   <!-- Main -->
   <main class="content">
     <!-- Lead -->
     <section class="lead">
       <div class="lead__container">
-        <h1 class="lead__title">Путешествия по России</h1>
-        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img src="./img/lead_image.jpg" alt="Маршрут путешествия" class="lead__image">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <h1 class="lead__title">Путешествия по&nbspРоссии</h1>
+        <p class="lead__subtitle">Настоящая страна не в&nbspвыпусках новостей, а&nbspздесь.</p>
+        <figure class="lead__path">
+          <img src="./img/lead_image.jpg" alt="Маршрут путешествия" class="lead__image">
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
       </div>
     </section>
     <!-- Intro -->
     <section class="intro">
       <div class="intro__container container container_size_small">
         <div class="intro__wrapper">
-          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <h2 class="intro__title">Чего мы там не&nbspвидели?</h2>
           <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
             планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле,
             Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана.
@@ -105,7 +107,7 @@
           <div class="places__heading">
             <h3 class="places__title">Куршская коса</h3>
             <div class="places__website">
-              <p class="places__url-heading">URL</p>
+              <p class="places__url-heading">url</p>
               <a href="http://park-kosa.ru" class="places__link" target="_blank">park-kosa.ru</a>
             </div>
           </div>
@@ -225,12 +227,12 @@
     <!-- Cover -->
     <section class="cover">
       <div class="cover__wrapper container container_size_big">
-        <div class="cover__heading">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от
-            столицы до Байкала на электричках.
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__heading" target="_blank">
+          <h2 class="cover__title">До&nbspБайкала «на&nbspсобаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о&nbspТранссибе — путешествие
+            от&nbspстолицы до&nbspБайкала на&nbspэлектричках.
           </p>
-        </div>
+        </a>
       </div>
     </section>
   </main>
@@ -240,19 +242,19 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-item">
-            <a href="#" class="footer__link">Карты</a>
+            <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
           </li>
           <li class="footer__menu-item">
-            <a href="#" class="footer__link">Погода</a>
+            <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
           </li>
           <li class="footer__menu-item">
-            <a href="#" class="footer__link">Расписание</a>
+            <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
           </li>
           <li class="footer__menu-item">
-            <a href="#" class="footer__link">Календарь</a>
+            <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
           </li>
           <li class="footer__menu-item">
-            <a href="#" class="footer__link">Путешествия</a>
+            <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
           </li>
         </ul>
       </nav>
