--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <main class="content">
     <!-- Lead -->
     <section class="lead lead__container">
-      <h1 class="lead__title">Путешествия по&nbspРоссии</h1>
-      <p class="lead__subtitle">Настоящая страна не в&nbspвыпусках новостей, а&nbspздесь.</p>
+      <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+      <p class="lead__subtitle">Настоящая страна не в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
       <figure class="lead__path">
         <img src="./img/lead_image.jpg" alt="Маршрут путешествия" class="lead__image">
         <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
@@ -33,7 +33,7 @@
     </section>
     <!-- Intro -->
     <section class="intro intro__container">
-      <h2 class="intro__title">Чего мы там не&nbspвидели?</h2>
+      <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
         планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле,
         Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана.
@@ -91,10 +91,10 @@
       <img src="./img/grid/photo-grid-12.jpg" alt="Эргаки" class="grid__card">
     </div>
     <!-- Places -->
-    <section class="places places__container">
+    <div class="places places__container">
       <article class="place">
         <div class="place__heading">
-          <h3 class="place__title">Куршская коса</h3>
+          <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
@@ -117,7 +117,7 @@
       </article>
       <article class="place">
         <div class="place__heading">
-          <h3 class="place__title">Кольский</h3>
+          <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link" target="_blank">
@@ -141,7 +141,7 @@
       </article>
       <article class="place">
         <div class="place__heading">
-          <h3 class="place__title">Алтай</h3>
+          <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link" target="_blank">
@@ -166,7 +166,7 @@
       </article>
       <article class="place">
         <div class="place__heading">
-          <h3 class="place__title">Зимний Байкал</h3>
+          <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="https://vk.com/baikalmile" class="place__link" target="_blank">
@@ -190,7 +190,7 @@
       </article>
       <article class="place">
         <div class="place__heading">
-          <h3 class="place__title">Карелия</h3>
+          <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a href="http://vodlozero.ru" class="place__link" target="_blank">
@@ -211,13 +211,13 @@
           </div>
         </div>
       </article>
-    </section>
+    </div>
     <!-- Cover -->
     <section class="cover">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__wrapper" target="_blank">
-        <h2 class="cover__title">До&nbspБайкала «на&nbspсобаках»</h2>
-        <p class="cover__subtitle">По&nbspмотивам учебной темы о&nbspТранссибе — путешествие
-          от&nbspстолицы до&nbspБайкала на&nbspэлектричках.
+        <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
+        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе — путешествие
+          от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.
         </p>
       </a>
     </section>
