day 3. rev 1: fix bem autotest errors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="body">
   <!-- Header -->
-  <header class="header header__container">
+  <header class="header">
     <img src="./img/logo.svg" alt="Логотип Россия" class="header__logo">
     <ul class="header__languages">
       <li class="header__language">
@@ -23,7 +23,7 @@
   <!-- Main -->
   <main class="content">
     <!-- Lead -->
-    <section class="lead lead__container">
+    <section class="lead">
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
       <p class="lead__subtitle">Настоящая страна не в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
       <figure class="lead__path">
@@ -32,7 +32,7 @@
       </figure>
     </section>
     <!-- Intro -->
-    <section class="intro intro__container">
+    <section class="intro">
       <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
         планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле,
@@ -76,7 +76,7 @@
       </ul>
     </section>
     <!-- Grid -->
-    <div class="grid grid__conrainer">
+    <div class="grid">
       <img src="./img/grid/photo-grid-1.jpg" alt="Поезд" class="grid__card">
       <img src="./img/grid/photo-grid-2.jpg" alt="Тулси" class="grid__card">
       <img src="./img/grid/photo-grid-3.jpg" alt="Туман" class="grid__card">
@@ -91,7 +91,7 @@
       <img src="./img/grid/photo-grid-12.jpg" alt="Эргаки" class="grid__card">
     </div>
     <!-- Places -->
-    <div class="places places__container">
+    <div class="places">
       <article class="place">
         <div class="place__heading">
           <h2 class="place__title">Куршская коса</h2>
@@ -223,7 +223,7 @@
     </section>
   </main>
   <!-- Footer -->
-  <footer class="footer footer__container">
+  <footer class="footer">
     <nav class="footer__menu">
       <ul class="footer__menu-list">
         <li class="footer__menu-item">
