day 3. rev 2: fix margins in 768p. Places: change div to section and article to div co of validation warnings

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       <img src="./img/grid/photo-grid-12.jpg" alt="Эргаки" class="grid__card">
     </div>
     <!-- Places -->
-    <div class="places">
-      <article class="place">
+    <section class="places">
+      <div class="place">
         <div class="place__heading">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
@@ -114,8 +114,8 @@
             </p>
           </div>
         </div>
-      </article>
-      <article class="place">
+      </div>
+      <div class="place">
         <div class="place__heading">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
@@ -138,8 +138,8 @@
             </p>
           </div>
         </div>
-      </article>
-      <article class="place">
+      </div>
+      <div class="place">
         <div class="place__heading">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
@@ -163,8 +163,8 @@
             </p>
           </div>
         </div>
-      </article>
-      <article class="place">
+      </div>
+      <div class="place">
         <div class="place__heading">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
@@ -187,8 +187,8 @@
             </p>
           </div>
         </div>
-      </article>
-      <article class="place">
+      </div>
+      <div class="place">
         <div class="place__heading">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
@@ -210,8 +210,8 @@
             </p>
           </div>
         </div>
-      </article>
-    </div>
+      </div>
+    </section>
     <!-- Cover -->
     <section class="cover">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__wrapper" target="_blank">
