day 3. rev 2: fix margins in 768p. change div to section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </ul>
     </section>
     <!-- Grid -->
-    <div class="grid">
+    <section class="grid">
       <img src="./img/grid/photo-grid-1.jpg" alt="Поезд" class="grid__card">
       <img src="./img/grid/photo-grid-2.jpg" alt="Тулси" class="grid__card">
       <img src="./img/grid/photo-grid-3.jpg" alt="Туман" class="grid__card">
@@ -89,10 +89,10 @@
       <img src="./img/grid/photo-grid-10.jpg" alt="Камчатка" class="grid__card">
       <img src="./img/grid/photo-grid-11.jpg" alt="Байкал" class="grid__card">
       <img src="./img/grid/photo-grid-12.jpg" alt="Эргаки" class="grid__card">
-    </div>
+    </section>
     <!-- Places -->
     <section class="places">
-      <div class="place">
+      <article class="place">
         <div class="place__heading">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
@@ -114,8 +114,8 @@
             </p>
           </div>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <div class="place__heading">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
@@ -138,8 +138,8 @@
             </p>
           </div>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <div class="place__heading">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
@@ -163,8 +163,8 @@
             </p>
           </div>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <div class="place__heading">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
@@ -187,8 +187,8 @@
             </p>
           </div>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <div class="place__heading">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
@@ -210,7 +210,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </article>
     </section>
     <!-- Cover -->
     <section class="cover">
