--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
-            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link" target="_blank">
-              Facebook
+            <a href="#" class="place__link" target="_blank">
+              Link
             </a>
           </div>
         </div>
